Fixed MMOBHTML-36: Product's tags are too close to each-other

--- a/skin/frontend/default/iphone/css/iphone.css
+++ b/skin/frontend/default/iphone/css/iphone.css
@@ -308,6 +308,9 @@ body > header dd.menu-box a {
     padding:10px;
     display:block;
 }
+body > header dd.menu-box a:hover {
+    -webkit-box-shadow:inset 0 8px 8px rgba(0, 0, 0, .75);
+}
 
 body > header dd.menu-box .welcome-msg {
     background:url(../images/bg_drop.jpg) repeat-x 0 0;
